--- a/css/new.css
+++ b/css/new.css
@@ -1,16 +1,23 @@
 .modelos{
     position: relative;
     border: rgb(48, 48, 48);
-    border-width: 0.5px;
+    border-width: 1px;
     border-style: solid;
     overflow: hidden;
     max-height: 600px;
 }
 
-.censor{
-    position: absolute;
-    bottom: 0;
+.iframe_Modelos{
     width: 100%;
-    height: 60px;
-    background-color: rgb(0, 0, 0);
+    height: 650px;
+}
+
+@media screen and (max-width: 800px) {
+    .modelos{
+        max-height: 400px;
+    }
+    
+    .iframe_Modelos{
+        height: 450px;
+    }
 }
