--- a/css/styles.css
+++ b/css/styles.css
@@ -64,7 +64,7 @@
   --bs-body-font-size: 1rem;
   --bs-body-font-weight: 400;
   --bs-body-line-height: 1.5;
-  --bs-body-color: #212529;
+  --bs-body-color: #ffffff;
   --bs-body-bg: rgb(0, 0, 0);
 }
 
