--- a/css/new.css
+++ b/css/new.css
@@ -12,8 +12,20 @@
     height: 650px;
 }
 
+.descripcion_modelo{
+
+    color: rgb(187, 187, 187);
+}
+
+.descripcion_modelo, .titulo_modelo{
+    border: rgb(48, 48, 48);
+    border-width: 1px;
+    border-style: solid;
+    padding: 20px;
+}
+
 @media screen and (max-width: 800px) {
-    .modelos{
+    .modelos{ 
         max-height: 400px;
     }
     
