--- a/css/new.css
+++ b/css/new.css
@@ -7,6 +7,10 @@
     max-height: 600px;
 }
 
+.texto{
+    width: 100%;
+}
+
 .iframe_Modelos{
     width: 100%;
     height: 650px;
@@ -32,4 +36,59 @@
     .iframe_Modelos{
         height: 450px;
     }
+}
+
+/* original idea http://www.bootply.com/phf8mnMtpe */
+
+
+.tree li {
+    list-style-type:none;
+    margin:0;
+    padding:10px 5px 0 5px; 
+    position:relative;
+}
+
+.tree li::before, .tree li::after {
+    content:'';
+    left:-20px;
+    position:absolute;
+    right:auto
+}
+
+.tree li::before {
+    border-left:1px solid #d63384;
+    bottom:50px;
+    height:100%;
+    top:0;
+    width:1px
+}
+
+.tree li::after {
+    border-top:1px solid #d63384;
+    height:20px;
+    top:30px;
+    width:25px
+}
+
+.tree li h4 {
+    border:1px solid #d63384;
+    display:inline-block;
+    margin-top: 20px;
+    padding:3px 8px;
+    text-decoration:none;
+}
+
+.tree li h7 {
+    display:inline-block;
+    padding:3px 8px;
+    text-decoration:none;
+    color: #d63384;
+}
+
+.tree>ul>li::before, .tree>ul>li::after {
+    border:0
+}
+
+.tree li:last-child::before {
+    height:30px
 }
