--- a/simulation/new.css
+++ b/simulation/new.css
@@ -15,7 +15,7 @@ body
     color: rgb(213, 255, 213);
 }
 
-.webgl
+#modelo
 {
     position: fixed;
     top: 0;
@@ -23,6 +23,8 @@ body
     outline: none;
     z-index: 0;
     display: none;
+    width: 100%;
+    height: 100%;
 }
 
 #controlPanel{
